# ParallelComputing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h  model_llama2.py  parallelized_mult.cpp  play_llama.py  requirements.txt  setup.py  speed_test.cpp
include/: matrix.h
matrix_multiplication/: benchmark.py
results/: Time_plot.ipynb  results.csv  time_comparison.txt  time_plot.ipynb
src/: matrix.cpp  matrix_binding.cpp
test/: speed_test.cpp  test.py
test_python_C/: speed_test.cpp  test.py
